Move Test / javaOptions to common plugin + fork needed